# neuropulse-grant-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  Дашборд Нейропульс.bat
config/: README.md  config.example.json
data/: dashboard_layout.json  grant_calendar.example.json  grant_calendar.json  grant_communications.example.json  grant_contacts.example.json  grant_documents_archive.example.json  grant_kkt.example.json  grant_project_dashboard.example.json  grant_risks.example.json  neuropulse_calendar_keys_cache.json  neuropulse_calendar_registry.json  notification_settings.example.json
docs/: Vector-Store-API.md  Доступ-к-API-Yandex-AI-Studio.md  Инструкция-настройка-агента-грант-Нейропульс.md  План-разработки-агента-гранта.md  Подключение-к-API-Yandex-AI-Studio.md  Пошаговая-настройка-для-не-программиста.md  Уведомления-и-документы-по-гранту.md  Яндекс-Диск-и-карты.md  Яндекс-Календарь-дашборд.md
docs/learning/yandex-ai-studio/: README.md  (+9 more)
scripts/: fill_contacts_from_application.py  grant_reminders.py  sync_grant_events_to_yandex_calendar.py
src/: __init__.py  agent_api_client.py  email_sender.py  git_auto_push.py  grant_documents.py  logging_config.py  vector_store_client.py  web_chat.py  yandex_ai_client.py  yandex_calendar_client.py  yandex_disk_client.py
src/dashboard/: README.md  __init__.py  app.py  neuropulse_theme.css
src/parser/: __init__.py  config.py  disk_fetcher.py  pipeline.py  telegram_fetcher.py
tests/: test_agent_api_client.py  test_yandex_calendar_sync.py
Паспорт/: история_диалогов.md  паспорт_проекта.md
